--- a/index.html
+++ b/index.html
@@ -15,9 +15,28 @@
 </head>
 
 <body>
-
-  <h1>Titulo testando</h1>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus voluptatibus alias deleniti ipsa, nisi natus labore, dicta debitis temporibus commodi quisquam impedit expedita praesentium voluptatum hic! Delectus nobis facilis error?</p>
+  <section class="white-bg p-fixed">
+    <div class="main-content d-flex">
+      <div>
+        <h2>LOGO</h2>
+      </div>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">Service</a>
+        <a href="#">Portifolio</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+      </nav>
+    </div>
+  </section>
+  <section class="main-bg section">
+    <div class="main-content">
+      <h1>Titulo</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem nulla dolor repellendus ab expedita velit,
+        aliquam ea enim! Vero debitis architecto dicta explicabo exercitationem. Beatae rerum culpa velit facere iure.
+      </p>
+    </div>
+  </section>
 </body>
 
 </html>
