menu features updated

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <section class="white-bg p-fixed">
     <div class="main-content d-flex">
       <div>
-        <h2>LOGO</h2>
+        <h2 class="logo">LOGO</h2>
       </div>
-      <nav>
+      <nav class="nav-menu">
         <a href="#">Home</a>
         <a href="#">Service</a>
         <a href="#">Portifolio</a>
