added features and new section to landing page

--- a/index.html
+++ b/index.html
@@ -23,16 +23,17 @@
         <h2 class="logo"><a href="#logo">LOGO</a></h2>
       </div>
       <nav class="nav-menu">
-        <a href="#home">Home</a>
-        <a href="#">Service</a>
+        <a href="#who-am-i">Who am I?</a>
+        <a href="#my-job">My job</a>
         <a href="#">Portifolio</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
       </nav>
     </div>
   </section>
-  <div id="logo" class="respiro"></div>
-  <section class="main-bg main-content section">
+
+  <div class="respiro"></div>
+  <section id="logo" class="main-bg main-content section">
     <div class="d-grid">
       <div id="intro">
         <h2>Welcome...</h2>
@@ -44,10 +45,43 @@
     </div>
   </section>
 
-  <section class="white-bg section">
-    <div class="respiro"></div>
-    <div id="home" class="main-content respiro">
-      <h2>Home</h2>
+  
+  <section  class="white-bg section main-content">
+    <div id="who-am-i" class="d-grid">
+      <img src="./assets/img/who-am-i.svg" alt="Who am I?" class="who-am-i-img">
+      <div>
+        <div class="main-content respiro who-am-i">
+          <h2>Who am I?</h2>
+          <p>My name is Igor. I am a mere brazilian guy, 26, who loves technologies, since I was a child.</p>
+          <p>Me and a little group of friends, when we were kids, we shared a mix of feelings while playing games on Lan
+            Houses (it's like a "house" with a lot of PC's with games - sadly it doesn't exists anymore, at least not
+            like years ago).</p>
+          <p>Nowadays, I already graduated and still learning what I love - technology. But, to be honestly, I am a
+            newbie who is just learning to improve my skills and, maybe, work as developer in the future.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  
+  <section  class="main-bg main-content section">
+    <div id="my-job"  class="d-flex-jobs">
+      <h2>My jobs nowadays...</h2>
+      <p>In this section I'll tell you what am doing and which are my jobs and hobbies.</p>
+    </div>
+    <div class="d-grid-jobs">
+      <div class="agro">
+        <h3>Research Agronomist</h3>
+        <p>I am an Agronomist Engineer (Research Agronomist), with M.Sc in Agronomy and Specialist in Management of Agribusiness. Nowadays, I am leading few researches with olive tree and others temperate fruits in Southern brazilian state.</p>
+      </div>
+      <div class="pseudo-dev">
+        <h3>Pseudo web developer</h3>
+        <p>I call myself as a "pseudo web developer" because I am still learning those three technologies that were used to create a minimal website. But I know that nowadays are a lot more, like frameworks and libs, so I am just in my first steps to become a web developer who can create and support a real software or even website.</p>
+      </div>
+      <div class="gamer">
+        <h3>Free time Gamer</h3>
+        <p>I love games, since my childhood, when I spent many hours front of my old computer playing games and learning a lot with those games that I used to play in the past. The most lovely game I used to play is called Silk Road Online. Fall in love with this game until now (2023).</p>
+      </div>
     </div>
   </section>
 </body>
