--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a href="#my-job">My job</a>
         <a href="#portifolio">Portifolio</a>
         <a href="#about">About</a>
-        <a href="#">Contact</a>
+        <a href="#contact">Contact</a>
       </nav>
     </div>
   </section>
@@ -126,6 +126,29 @@
         <div id="react-svg"><img src="./assets/img/figma.svg" alt="Figma logo" ></div>
       </div>
       <p>And much more...</p>      
+    </div>
+  </section>
+
+  
+  <section class="white-bg section main-content">
+    <div id="contact" class="d-flex">
+      <div class="div-contato">
+        <h1>Contato</h1>
+        <p>Para entrar em contato, preencha o formulário abaixo.</p>        
+        <form id="formulario" action="" method="get">
+          <fieldset class="fieldset">
+            <legend>Contato</legend>
+            <label for="nome">Nome: <input type="text" placeholder="Digite seu nome"></label><br>            
+            <label for="sobrenome">Sobrenome: <input type="text" placeholder="Digite seu sobrenome"></label><br>            
+            <label for="email">Email: <input type="email" placeholder="Digite seu melhor email"></label><br>
+            <label for="mensagem">Digite sua mensagem: <br><textarea rows="5" cols="50" name="mensage" form="formulario"></textarea></label><br>
+            <button type="submit">Enviar</button>            
+          </fieldset>          
+        </form>
+      </div>
+      <div class="contact-img">
+        <img src="./assets/img/contact.svg" alt="Contact SVG image" id="contact-svg">
+      </div>
     </div>
   </section>
 </body>
